Fix left panel background not stretching to bottom.

--- a/src/app/css/energiatieto.css
+++ b/src/app/css/energiatieto.css
@@ -98,7 +98,10 @@ div.navbar {
 /* panels */
 
 .panel.left {
-    float: left;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    padding-top: 5em;
     margin-bottom: 0px; /* 0 if there is no footer */
     width: 560px;
     background-color: #F0F0F0;
@@ -106,13 +109,14 @@ div.navbar {
 }
 
 .panel.right {
+    margin-left: 560px;
     padding-right: 4px;
     padding-left: 4px;
     width: auto;
     min-width: 550px;
+    min-height: 80em;
     overflow: hidden;
     background: #ffffff;
-    /* display: inline-block; */
 }
 
 .infoarea {
